// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelpPage should match a snapshot 1`] = `
<div>
  <Component>
    Help
  </Component>
  <Component>
    <Component
      key="Welcome Guide"
    >
      <Component
        centerContent={true}
        flexColumn={true}
        hasPadding={true}
      >
        <div>
          <img
            alt="Welcome Guide"
            src=""
          />
        </div>
        <Component
          isCentered={true}
        >
          Welcome Guide
        </Component>
        <p>
          Need a little help? Have a look through the Welcome Guide, which we’ve put
      together to help you navigate through your Developer portal.
        </p>
        <p>
          <Component
            disabled={false}
            fullWidth={false}
            loading={false}
            onClick={[Function]}
            type="button"
            variant="primary"
          >
            VIEW
          </Component>
        </p>
      </Component>
    </Component>
    <Component
      key="Request a Feature"
    >
      <Component
        centerContent={true}
        flexColumn={true}
        hasPadding={true}
      >
        <div>
          <img
            alt="Request a Feature"
            src=""
          />
        </div>
        <Component
          isCentered={true}
        >
          Request a Feature
        </Component>
        <p>
          Use this form to request a feature in either the Marketplace or Foundations API. Please note, we will
      look at all requests carefully however, we cannot guarantee all will be implemented.
        </p>
        <p>
          <Component
            disabled={false}
            fullWidth={false}
            loading={false}
            onClick={[Function]}
            type="button"
            variant="primary"
          >
            REQUEST
          </Component>
        </p>
      </Component>
    </Component>
    <Component
      key="Report a Bug"
    >
      <Component
        centerContent={true}
        flexColumn={true}
        hasPadding={true}
      >
        <div>
          <img
            alt="Report a Bug"
            src=""
          />
        </div>
        <Component
          isCentered={true}
        >
          Report a Bug
        </Component>
        <p>
          Please report details of any bugs in relation to the Reapit Developer portal or Reapit Foundations API here. 
        </p>
        <p>
          <Component
            disabled={false}
            fullWidth={false}
            loading={false}
            onClick={[Function]}
            type="button"
            variant="primary"
          >
            REPORT
          </Component>
        </p>
      </Component>
    </Component>
    <Component
      key="Roadmap"
    >
      <Component
        centerContent={true}
        flexColumn={true}
        hasPadding={true}
      >
        <div>
          <img
            alt="Roadmap"
            src=""
          />
        </div>
        <Component
          isCentered={true}
        >
          Roadmap
        </Component>
        <p>
          Want to see what we are building or check on the progress of your feature requests?
      You can see our product roadmap milestones here. 
        </p>
        <p>
          <Component
            disabled={false}
            fullWidth={false}
            loading={false}
            onClick={[Function]}
            type="button"
            variant="primary"
          >
            VIEW
          </Component>
        </p>
      </Component>
    </Component>
    <Component
      key="Need Help?"
    >
      <Component
        centerContent={true}
        flexColumn={true}
        hasPadding={true}
      >
        <div>
          <img
            alt="Need Help?"
            src=""
          />
        </div>
        <Component
          isCentered={true}
        >
          Need Help?
        </Component>
        <p>
          If you need any support, we are here to help. Why not talk to one of our Developers or Product Owners directly.
        </p>
        <p>
          <Component
            disabled={false}
            fullWidth={false}
            loading={false}
            onClick={[Function]}
            type="button"
            variant="primary"
          >
            START CHAT
          </Component>
        </p>
      </Component>
    </Component>
  </Component>
</div>
`;

exports[`renderHelpItems should match snapshot 1`] = `
<Unknown>
  <Unknown>
    <Unknown
      centerContent={true}
      flexColumn={true}
      hasPadding={true}
    >
      <div>
        <img
          alt="Welcome Guide"
          src=""
        />
      </div>
      <Unknown
        isCentered={true}
      >
        Welcome Guide
      </Unknown>
      <p>
        Need a little help? Have a look through the Welcome Guide, which we’ve put
      together to help you navigate through your Developer portal.
      </p>
      <p>
        <Unknown
          disabled={false}
          fullWidth={false}
          loading={false}
          onClick={[Function]}
          type="button"
          variant="primary"
        >
          VIEW
        </Unknown>
      </p>
    </Unknown>
  </Unknown>
  <Unknown>
    <Unknown
      centerContent={true}
      flexColumn={true}
      hasPadding={true}
    >
      <div>
        <img
          alt="Request a Feature"
          src=""
        />
      </div>
      <Unknown
        isCentered={true}
      >
        Request a Feature
      </Unknown>
      <p>
        Use this form to request a feature in either the Marketplace or Foundations API. Please note, we will
      look at all requests carefully however, we cannot guarantee all will be implemented.
      </p>
      <p>
        <Unknown
          disabled={false}
          fullWidth={false}
          loading={false}
          onClick={[Function]}
          type="button"
          variant="primary"
        >
          REQUEST
        </Unknown>
      </p>
    </Unknown>
  </Unknown>
  <Unknown>
    <Unknown
      centerContent={true}
      flexColumn={true}
      hasPadding={true}
    >
      <div>
        <img
          alt="Report a Bug"
          src=""
        />
      </div>
      <Unknown
        isCentered={true}
      >
        Report a Bug
      </Unknown>
      <p>
        Please report details of any bugs in relation to the Reapit Developer portal or Reapit Foundations API here. 
      </p>
      <p>
        <Unknown
          disabled={false}
          fullWidth={false}
          loading={false}
          onClick={[Function]}
          type="button"
          variant="primary"
        >
          REPORT
        </Unknown>
      </p>
    </Unknown>
  </Unknown>
  <Unknown>
    <Unknown
      centerContent={true}
      flexColumn={true}
      hasPadding={true}
    >
      <div>
        <img
          alt="Roadmap"
          src=""
        />
      </div>
      <Unknown
        isCentered={true}
      >
        Roadmap
      </Unknown>
      <p>
        Want to see what we are building or check on the progress of your feature requests?
      You can see our product roadmap milestones here. 
      </p>
      <p>
        <Unknown
          disabled={false}
          fullWidth={false}
          loading={false}
          onClick={[Function]}
          type="button"
          variant="primary"
        >
          VIEW
        </Unknown>
      </p>
    </Unknown>
  </Unknown>
  <Unknown>
    <Unknown
      centerContent={true}
      flexColumn={true}
      hasPadding={true}
    >
      <div>
        <img
          alt="Need Help?"
          src=""
        />
      </div>
      <Unknown
        isCentered={true}
      >
        Need Help?
      </Unknown>
      <p>
        If you need any support, we are here to help. Why not talk to one of our Developers or Product Owners directly.
      </p>
      <p>
        <Unknown
          disabled={false}
          fullWidth={false}
          loading={false}
          onClick={[Function]}
          type="button"
          variant="primary"
        >
          START CHAT
        </Unknown>
      </p>
    </Unknown>
  </Unknown>
</Unknown>
`;
